# sieci-neuronowe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Projekt I/: ArgsParser.cs  BackProp.cs  CircularErrorBuffer.cs  ClassifiedPoint.cs  CommandLineParser.cs  ErrorBuffer.cs  GradWorker.cs  NeuralNetwork.cs  NeuralNetworkFileParser.cs  NeuroPoint.cs  Parser.cs  PictureGenerator.cs  Program.cs  RegressionPoint.cs  SquareErrorFunction.cs  StochasticBackProp.cs  StreamStatusReportable.cs  packages.config  resharperSettings.DotSettings  sieci-neuronowe.csproj  sieci-neuronowe.sln  sieci-neuronowe.sln.DotSettings
Projekt I/Properties/: AssemblyInfo.cs
Projekt I/TestEncog/: Program.cs  TestEncog.csproj  TestEncog.sln
Projekt I/TestEncog/Properties/: AssemblyInfo.cs
Projekt I/data/classification/: data.test.csv  data.train.csv
Projekt I/data/config/: noisyXOR.json
Projekt I/data/neural_networks/: example.txt  format_of_neural_network.txt  noisyXOR.txt
Projekt I/output/: circles-err1.7z
Projekt II/: neural-networks.sln  sieci-neuronowe.DotSettings
Projekt II/engine/: AssemblyInfo.cpp  README.txt  ReadMe.txt  Stdafx.cpp  engine.cpp  engine.h  engine.sln  engine.vcxproj  engine.vcxproj.filters
Projekt II/gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TheContext.cs  gui.csproj
sn-built-up-area/: train_model.sh
sn-built-up-area/model/: solver.prototxt
sn-built-up-area/scripts/: prepare_data.py  test_fake_data.py  test_one.py  test_one_new.py
torch-neuro/: main.lua  model.lua  samples.lua  train.lua
(+21 files in other folders)
